<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conversation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.message.MessageFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/layout_message_receive" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:elevation="12dp"
        android:padding="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/normal_background"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_add_attachment"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:background="@color/transparent"
                android:contentDescription="@string/add_image_button_desc"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/ic_attachment"
                app:tint="@color/green_light" />


            <EditText
                android:id="@+id/et_message_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:focusableInTouchMode="true"
                android:hint="@string/message_edit_text_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/primaryTextColor"
                tools:text="test" />

            <ImageButton
                android:id="@+id/ib_switch_sim"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_round"
                android:contentDescription="@string/switch_sim_desc"
                android:src="@drawable/ic_sim_1" />

            <ImageButton
                android:id="@+id/ib_send_msg"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:background="@color/transparent"
                android:contentDescription="@string/send_msg_desc"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/ic_send"
                app:tint="@color/green_light" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>