<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startScreenFragment">

    <fragment
        android:id="@+id/startScreenFragment"
        android:name="com.layrin.smsclassification.ui.start_screen.StartScreenFragment"
        android:label=""
        tools:layout="@layout/fragment_start_screen">
        <action
            android:id="@+id/action_startScreenFragment_to_conversationFragment"
            app:destination="@id/conversationFragment"
            app:enterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_right"
            app:popUpTo="@id/startScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.layrin.smsclassification.ui.message.MessageFragment"
        android:label=""
        tools:layout="@layout/fragment_message">
        <argument
            android:name="contactPhoneNumber"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/contactFragment"
        android:name="com.layrin.smsclassification.ui.contact.ContactFragment"
        android:label="@string/new_message_fragment_title"
        tools:layout="@layout/fragment_contact">
        <action
            android:id="@+id/action_contactFragment_to_messageFragment"
            app:destination="@id/messageFragment"
            app:enterAnim="@anim/from_right"
            app:popUpTo="@id/conversationFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.layrin.smsclassification.ui.settings.SettingsFragment"
        android:label="@string/settings_fragment_title">
        <action
            android:id="@+id/action_settingsFragment_to_conversationFragment"
            app:destination="@id/conversationFragment" />
    </fragment>
    <fragment
        android:id="@+id/conversationFragment"
        android:name="com.layrin.smsclassification.ui.conversation.ConversationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_conversation">
        <action
            android:id="@+id/action_conversationFragment_to_contactFragment"
            app:destination="@id/contactFragment"
            app:enterAnim="@anim/from_right" />
        <action
            android:id="@+id/action_conversationFragment_to_messageFragment"
            app:destination="@id/messageFragment"
            app:enterAnim="@anim/from_right" />
        <action
            android:id="@+id/action_conversationFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/from_right" />
    </fragment>
</navigation>